--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,6 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -33,7 +32,8 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="@string/google_maps_key"
+            />
 
         <activity
             android:name=".MapsActivity"
@@ -41,9 +41,6 @@
         <activity
             android:name=".AddLocationActivity"
             android:label="Add Location" />
-        <activity
-            android:name=".DatabaseAccess"
-            android:label="Post to DB" />
     </application>
 
 </manifest>
