Added details page for rated locations

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,8 @@
         <activity
             android:name=".AddLocationActivity"
             android:label="Add Location" />
+        <activity android:name=".LocationDetails"
+            android:label="Location Details" />
     </application>
 
 </manifest>
